[gd_scene load_steps=35 format=3 uid="uid://cupwku7ga8cm"]

[ext_resource type="Theme" uid="uid://b1mllftlbva2u" path="res://2d/assets/themes/theme.tres" id="1"]
[ext_resource type="Theme" uid="uid://260f2cqe7tfn" path="res://2d/assets/themes/rounded_button.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://e0vfqn8o86wr" path="res://bundles/assets/images/foundation/stone1.png" id="3"]
[ext_resource type="Script" path="res://2d/source/scripts/game/unit_description.gd" id="4"]
[ext_resource type="Script" path="res://2d/source/scripts/game/try_move.gd" id="5"]
[ext_resource type="Script" path="res://2d/source/scripts/game/build_level.gd" id="6"]
[ext_resource type="Script" path="res://2d/source/scripts/runes/rune_casting.gd" id="7"]
[ext_resource type="Script" path="res://2d/source/scripts/game/player_damage.gd" id="8"]
[ext_resource type="Script" path="res://2d/source/scripts/game/reference.gd" id="9"]
[ext_resource type="Script" path="res://2d/source/scripts/runes/rune_casted.gd" id="10"]
[ext_resource type="Script" path="res://2d/source/scripts/game/game_world.gd" id="11"]
[ext_resource type="Texture2D" uid="uid://doqxpxf13ahcf" path="res://bundles/assets/images/foundation/ceiling.png" id="12"]
[ext_resource type="Texture2D" uid="uid://bmhp2pfp35dhg" path="res://bundles/assets/images/foundation/floor_rooms1.png" id="13"]
[ext_resource type="Texture2D" uid="uid://cnsjwi2klr7x5" path="res://bundles/assets/images/foundation/ladder_up1.png" id="14"]
[ext_resource type="Texture2D" uid="uid://dc4yx3c1k4x3d" path="res://bundles/assets/images/foundation/door1.png" id="15"]
[ext_resource type="Texture2D" uid="uid://c2r35p33ipt6e" path="res://bundles/assets/images/foundation/ladder_down1.png" id="16"]
[ext_resource type="Texture2D" uid="uid://bagaynl1wno8y" path="res://bundles/assets/images/foundation/wall1.png" id="17"]
[ext_resource type="Texture2D" uid="uid://b5flkg62r886x" path="res://bundles/assets/images/foundation/floor1.png" id="18"]
[ext_resource type="Texture2D" uid="uid://dmgicbawq3jpk" path="res://2d/assets/images/black.png" id="19"]
[ext_resource type="PackedScene" uid="uid://jvbp0m8x4ujy" path="res://2d/source/scenes/player.tscn" id="20"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4qhd7"]
texture = ExtResource("17")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/z_index = 5
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/z_index = 5
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, -16, -16, -16, 16, 16, 16)
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/z_index = 5
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, 16, 16, 16, -16, -16, -16)
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/z_index = 5
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
0:0/4 = 4
0:0/4/transpose = true
0:0/4/z_index = 5
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -16, 16, 16, 16, 16, -16)
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/z_index = 5
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, -16)
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/z_index = 5
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/z_index = 5
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0
0:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, 16, -16, -16, -16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_432k7"]
texture = ExtResource("15")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/z_index = 5
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/z_index = 5
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, -16, -16, -16, 16, 16, 16)
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/z_index = 5
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, 16, 16, 16, -16, -16, -16)
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/z_index = 5
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
0:0/4 = 4
0:0/4/transpose = true
0:0/4/z_index = 5
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -16, 16, 16, 16, 16, -16)
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/z_index = 5
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, -16)
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/z_index = 5
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/z_index = 5
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0
0:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, 16, -16, -16, -16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jpkmf"]
texture = ExtResource("18")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/z_index = -4096
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/z_index = -4096
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/z_index = -4096
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/z_index = -4096
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/4 = 4
0:0/4/transpose = true
0:0/4/z_index = -4096
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/z_index = -4096
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/z_index = -4096
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/z_index = -4096
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_un5a6"]
texture = ExtResource("16")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/z_index = -4096
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/z_index = -4096
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/z_index = -4096
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/z_index = -4096
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/4 = 4
0:0/4/transpose = true
0:0/4/z_index = -4096
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/z_index = -4096
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/z_index = -4096
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/z_index = -4096
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h3ypf"]
texture = ExtResource("14")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/z_index = -4096
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/z_index = -4096
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/z_index = -4096
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/z_index = -4096
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/4 = 4
0:0/4/transpose = true
0:0/4/z_index = -4096
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/z_index = -4096
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/z_index = -4096
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/z_index = -4096
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dxkv3"]
texture = ExtResource("3")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/z_index = -4096
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/z_index = -4096
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, -16, -16, -16, 16, 16, 16)
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/z_index = -4096
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, 16, 16, 16, -16, -16, -16)
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/z_index = -4096
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
0:0/4 = 4
0:0/4/transpose = true
0:0/4/z_index = -4096
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -16, 16, 16, 16, 16, -16)
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/z_index = -4096
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, -16)
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/z_index = -4096
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/z_index = -4096
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0
0:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, 16, -16, -16, -16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2dvk4"]
texture = ExtResource("13")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/z_index = -4096
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/z_index = -4096
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/z_index = -4096
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/z_index = -4096
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/4 = 4
0:0/4/transpose = true
0:0/4/z_index = -4096
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/z_index = -4096
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/z_index = -4096
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/z_index = -4096
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1s0xx"]
texture = ExtResource("12")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/z_index = 4096
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/z_index = 4096
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/z_index = 4096
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/z_index = 4096
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/4 = 4
0:0/4/transpose = true
0:0/4/z_index = 4096
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/z_index = 4096
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/z_index = 4096
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/z_index = 4096
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="4"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_4qhd7")
sources/1 = SubResource("TileSetAtlasSource_432k7")
sources/2 = SubResource("TileSetAtlasSource_jpkmf")
sources/3 = SubResource("TileSetAtlasSource_un5a6")
sources/4 = SubResource("TileSetAtlasSource_h3ypf")
sources/5 = SubResource("TileSetAtlasSource_dxkv3")
sources/6 = SubResource("TileSetAtlasSource_2dvk4")
sources/7 = SubResource("TileSetAtlasSource_1s0xx")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ot1an"]
texture = ExtResource("19")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/z_index = 4096
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/z_index = 4096
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/z_index = 4096
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/z_index = 4096
0:0/4 = 4
0:0/4/transpose = true
0:0/4/z_index = 4096
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/z_index = 4096
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/z_index = 4096
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/z_index = 4096

[sub_resource type="TileSet" id="7"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_ot1an")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5nkxr"]
texture = ExtResource("19")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/z_index = 4096
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/z_index = 4096
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/z_index = 4096
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/z_index = 4096
0:0/4 = 4
0:0/4/transpose = true
0:0/4/z_index = 4096
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/z_index = 4096
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/z_index = 4096
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/z_index = 4096

[sub_resource type="TileSet" id="6"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_5nkxr")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqywc"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.231373, 0.0313726, 0.470588, 0.913725)

[node name="SubViewportContainer" type="SubViewportContainer"]
custom_minimum_size = Vector2(608, 352)
offset_left = 40.0
offset_top = 40.0
offset_right = 648.0
offset_bottom = 392.0

[node name="WorldViewport" type="SubViewport" parent="."]
process_mode = 3
handle_input_locally = false
size = Vector2i(608, 352)
render_target_update_mode = 4

[node name="GameWorld" type="Node2D" parent="WorldViewport" groups=["game_world"]]
script = ExtResource("11")

[node name="TileMap" type="TileMap" parent="WorldViewport/GameWorld"]
tile_set = SubResource("4")
format = 2

[node name="OverlayMap" type="TileMap" parent="WorldViewport/GameWorld"]
z_as_relative = false
tile_set = SubResource("7")
format = 2

[node name="VisibilityMap" type="TileMap" parent="WorldViewport/GameWorld"]
z_as_relative = false
tile_set = SubResource("6")
format = 2

[node name="RuneCasting" type="Node2D" parent="WorldViewport/GameWorld" groups=["rune_casting"]]
script = ExtResource("7")

[node name="RuneCasted" type="Node2D" parent="WorldViewport/GameWorld" groups=["rune_casted"]]
script = ExtResource("10")

[node name="TryMove" type="Node2D" parent="WorldViewport/GameWorld" groups=["move"]]
script = ExtResource("5")

[node name="BuildLevel" type="Node2D" parent="WorldViewport/GameWorld"]
script = ExtResource("6")

[node name="RefCounted" type="Node2D" parent="WorldViewport/GameWorld" groups=["reference"]]
script = ExtResource("9")

[node name="Unit" type="Node2D" parent="WorldViewport/GameWorld" groups=["unit_description"]]
z_index = 4096
script = ExtResource("4")

[node name="Timer" type="Timer" parent="WorldViewport/GameWorld/Unit"]

[node name="Player" parent="WorldViewport/GameWorld" instance=ExtResource("20")]
position = Vector2(0, 0)

[node name="Damage" type="Node2D" parent="WorldViewport/GameWorld/Player"]
script = ExtResource("8")

[node name="TimerDelayMove" type="Timer" parent="WorldViewport/GameWorld"]
wait_time = 0.05
one_shot = true

[node name="TimerRuneZorder" type="Timer" parent="WorldViewport/GameWorld"]
wait_time = 0.5

[node name="TimerMoveSpeedPlayer" type="Timer" parent="WorldViewport/GameWorld"]
wait_time = 0.05

[node name="TimerYield" type="Timer" parent="WorldViewport/GameWorld"]

[node name="Panel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 2
theme = ExtResource("1")

[node name="MiniMapBorderPanel" type="Panel" parent="."]
layout_mode = 2
theme = ExtResource("2")
theme_override_styles/panel = SubResource("StyleBoxFlat_gqywc")

[node name="MiniMapCenterIndicator" type="Panel" parent="."]
visible = false
layout_mode = 2

[connection signal="timeout" from="WorldViewport/GameWorld/Unit/Timer" to="WorldViewport/GameWorld/Unit" method="_on_Timer_timeout"]
[connection signal="timeout" from="WorldViewport/GameWorld/TimerDelayMove" to="WorldViewport/GameWorld" method="_on_timer_delay_move_timeout"]
[connection signal="timeout" from="WorldViewport/GameWorld/TimerRuneZorder" to="WorldViewport/GameWorld/RuneCasting" method="_on_TimerRuneZorder_timeout"]
[connection signal="timeout" from="WorldViewport/GameWorld/TimerMoveSpeedPlayer" to="WorldViewport/GameWorld/TryMove" method="_on_TimerMoveSpeedPlayer_timeout"]
[connection signal="timeout" from="WorldViewport/GameWorld/TimerYield" to="WorldViewport/GameWorld/TryMove" method="_on_TimerYield_timeout"]
